# pmqtt

./: CMakeLists.txt  README.md  sources.cmake  sources.mk
include/pmqtt/: mqtt.h
src/: coremqtt.c  dummy.c
